--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -175,7 +175,7 @@
   justify-content:space-between;
 }
 
-.iconPlusSitebar > a {
+.iconPlusSitebar > div {
   background-image:url("../public/images/NewSinewsIcon.jpg");
   background-repeat:no-repeat;
   background-position:center;
@@ -184,6 +184,7 @@
   height:35vh;
   margin:12vh 0 0 2vw;
   opacity:0.9;
+  cursor:pointer;
 }
 
 .siteNav {
@@ -193,7 +194,12 @@
   margin-right:6%;
 }
 
-.siteNav > button {
+.dropDown, .dropDown > button {
+  position:relative;
+}
+
+
+.siteNav > .dropDown > button, .home, .about {
   border:none;
   font-family:"lores-9-plus-narrow", monospace;
   font-size: 0.7rem;
@@ -204,10 +210,49 @@
   border-radius:45px;
   text-transform:lowercase;
   letter-spacing:1.5px;
+  cursor:pointer;
 }
 
-.siteNav > button:not(last-child) {
+.siteNav > .dropDown > button:not(last-child) {
   margin-right:3px;
+}
+
+.dropDown > button:hover {
+  background-color:#c0a5a5;
+  color:white;
+}
+
+.issueContent {
+  display: none;
+  position: absolute;
+  z-index: 7;
+  box-shadow: 4px 8px 26px black;
+  cursor:pointer;
+}
+
+.issueContent button {
+  border:2px inset snow;
+  font-family:"lores-9-plus-narrow", monospace;
+  font-size: 0.9rem;
+  background-color:black;
+  color:snow;
+  opacity: 0.9;
+  padding:12px 16px;
+  text-align: left;
+  text-transform:lowercase;
+  letter-spacing:1.5px;
+  position: relative;
+
+
+}
+
+.issueContent button:hover {
+  background-color:#b0b0b0;
+}
+
+.siteNav > .dropDown > button:hover + .issueContent {
+  display: flex;
+  flex-flow: column wrap;
 }
 
 @media (max-width: 991.98px) {
