--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -31,6 +31,7 @@
   margin:12vh 0 0 2vw;
   cursor:pointer;
   opacity:0.5;
+  cursor:pointer;
 }
 
 .graffiti {
@@ -61,6 +62,7 @@
   border-radius:45px;
   text-transform:lowercase;
   letter-spacing:1.5px;
+  cursor:pointer;
 }
 
 .siteNav > button:not(last-child) {
